deploy: cce0f94b7f8cd26fed02b69085a0c3058245007b

--- a/src/twitch_oauth2/scopes.rs.html
+++ b/src/twitch_oauth2/scopes.rs.html
@@ -18,7 +18,7 @@
 <a href=#18 id=18 data-nosnippet>18</a>        <span class="attr">#[doc = <span class="string">"Scopes for twitch."</span>]
 <a href=#19 id=19 data-nosnippet>19</a>        #[doc = <span class="string">""</span>]
 <a href=#20 id=20 data-nosnippet>20</a>        #[doc = <span class="string">"&lt;https://dev.twitch.tv/docs/authentication/scopes/&gt;"</span>]
-<a href=#21 id=21 data-nosnippet>21</a>        #[derive(Debug, Clone, Deserialize, Serialize, PartialEq, Eq)]
+<a href=#21 id=21 data-nosnippet>21</a>        #[derive(Debug, Clone, Deserialize, Serialize, PartialEq, Eq, Hash)]
 <a href=#22 id=22 data-nosnippet>22</a>        #[non_exhaustive]
 <a href=#23 id=23 data-nosnippet>23</a>        #[serde(from = <span class="string">"String"</span>)]
 <a href=#24 id=24 data-nosnippet>24</a>        #[serde(into = <span class="string">"String"</span>)]
